https://faang-school.atlassian.net/browse/BJS2-41118
Поправил все, немного переделпл метод удаления, снес логи, ибо мешают очень, протестил через постман, переделал тесты, ибо перестали работать, все работает(наверно)